--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,7 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  font-family: "Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"
+}
